--- a/app/src/main/res/layout/adapter_show.xml
+++ b/app/src/main/res/layout/adapter_show.xml
@@ -64,5 +64,22 @@
             android:text="mark"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Средний балл"
+            android:ems="6"/>
+        <TextView
+            android:id="@+id/tv_average_mark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="mark"/>
+    </LinearLayout>
+
+
 
 </LinearLayout>
